--- a/DockerCompose.yml
+++ b/DockerCompose.yml
@@ -8,8 +8,8 @@ services:
       ports:
         - '2080:80'
       volumes:
-        - ./api:/var/www/html
-        - ./api:/var/www
+        - ./back/API-Directus:/var/www/html
+        - ./back/API-Directus:/var/www
       working_dir: /var/www/html
       networks:
          geoQuiz.net:
@@ -23,8 +23,8 @@ services:
       ports:
         - '2081:80'
       volumes:
-        - ./auth:/var/www/html
-        - ./auth:/var/www
+        - ./back/API-Auth:/var/www/html
+        - ./back/API-Auth:/var/www
       working_dir: /var/www/html
       networks:
          geoQuiz.net:
@@ -38,8 +38,8 @@ services:
       ports:
         - '2082:80'
       volumes:
-        - ./geo:/var/www/html
-        - ./geo:/var/www
+        - ./back/API-Geolo:/var/www/html
+        - ./back/API-Geolo:/var/www
       working_dir: /var/www/html
       networks:
          geoQuiz.net:
@@ -79,7 +79,7 @@ services:
           # Required when running on platform other than amd64, like Apple M1/M2:
           # platform: linux/amd64
           volumes:
-            - ./data/database:/var/lib/postgresql/data
+            - ./back/data/database:/var/lib/postgresql/data
           environment:
             POSTGRES_USER: "directus"
             POSTGRES_PASSWORD: "directus"
@@ -97,7 +97,7 @@ services:
             ports:
               - 8055:8055
             volumes:
-              - ./uploads:/directus/uploads
+              - ./back/uploads:/directus/uploads
               # If you want to load extensions from the host
               # - ./extensions:/directus/extensions
             depends_on:
@@ -137,8 +137,8 @@ services:
       ports:
             - '2083:80'
       volumes:
-            - ./frontend:/var/www/html
-            - ./frontend:/var/www
+            - ./front/GeoQuiz:/var/www/html
+            - ./front/GeoQuiz:/var/www
       working_dir: /var/www/html
       networks:
                 - geoQuiz.net
