--- a/Docker-Compose.yml
+++ b/Docker-Compose.yml
@@ -8,9 +8,9 @@ services:
     ports:
       - '2080:80'
     volumes:
-      - ./back/API-Directus:/var/www/html
+      - ./back/API-Directus/public:/var/www/html
       - ./back/API-Directus:/var/www
-    working_dir: /var/www/html
+    working_dir: /var/www
     networks:
       geoQuiz.net:
          aliases:
@@ -23,13 +23,13 @@ services:
     ports:
       - '2081:80'
     volumes:
-      - ./back/API-Auth:/var/www/html
+      - ./back/API-Auth/public:/var/www/html
       - ./back/API-Auth:/var/www
-    working_dir: /var/www/html
+    working_dir: /var/www
     networks:
       geoQuiz.net:
-         aliases:
-            - api.auth
+        aliases:
+          - api.auth
     depends_on:
       - geoQuiz.db.auth
 
@@ -38,9 +38,9 @@ services:
     ports:
       - '2082:80'
     volumes:
-      - ./back/API-Geolo:/var/www/html
+      - ./back/API-Geolo/public:/var/www/html
       - ./back/API-Geolo:/var/www
-    working_dir: /var/www/html
+    working_dir: /var/www
     networks:
       geoQuiz.net:
           aliases:
