--- a/front/GeoQuiz/package.json
+++ b/front/GeoQuiz/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
