--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ networks:
     driver: bridge
 services:
   geoQuiz.api.auth:
-    image: 'canals/php:latest'
+    image: 'canals/php:8.2'
     ports:
       - '37201:80'
     volumes:
@@ -19,7 +19,7 @@ services:
       - geoQuiz.db.auth
 
   geoQuiz.api.geo:
-    image: 'canals/php:latest'
+    image: 'canals/php:8.2'
     ports:
       - '37202:80'
     volumes:
@@ -46,7 +46,7 @@ services:
     command: '--default-authentication-plugin=mysql_native_password --character-set-server=utf8 --collation-server=utf8_general_ci'
     env_file: component/db.env
     ports:
-      - '33204:3306'
+      - '37204:3306'
     networks:
       - geoQuiz.net
 
@@ -68,6 +68,9 @@ services:
       - ./back/data/database:/var/lib/postgresql/data
     env_file:
       - component/dbDirectus.env
+    environment:
+      CORS_ENABLED: "true"
+      CORS_ORIGIN: "true"
     networks:
       - geoQuiz.net
 
@@ -107,8 +110,7 @@ services:
     ports:
       - '37207:80'
     volumes:
-      - ./front/GeoQuiz:/var/www/html
-      - ./front/GeoQuiz:/var/www
-    working_dir: /var/www/html
+      - ./front/GeoQuiz/dist:/var/www/html
+    working_dir: /var/www
     networks:
       - geoQuiz.net
