--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,6 @@ services:
     networks:
       - geoQuiz.net
 
-
   geoQuiz.db.directus:
     image: postgis/postgis:13-master
     # Required when running on platform other than amd64, like Apple M1/M2:
@@ -80,7 +79,7 @@ services:
       - geoQuiz.net
 
   geoQuiz.directus:
-    image: directus/directus:10.8.3
+    image: directus/directus:10.9.0
     ports:
       - "37206:8055"
     volumes:
@@ -90,18 +89,24 @@ services:
     depends_on:
       - cache
       - geoQuiz.db.directus
-    env_file:
-      - component/directus.env
-
-
-      # Make sure to set this in production
-      # (see https://docs.directus.io/self-hosted/config-options#general)
-      # PUBLIC_URL: "https://directus.example.com"
-
-    # Environment variables can also be defined in a file (for example `.env`):
-    # env_file:
-    #	  - .env
-
+    environment:
+      - KEY=255d861b-5ea1-5996-9aa3-922530ec40b1
+      - SECRET=6116487b-cda1-52c2-b5b5-c8022c45e263
+      - DB_CLIENT=pg
+      - DB_HOST=geoQuiz.db.directus
+      - DB_PORT=5432
+      - DB_DATABASE=geoquiz
+      - DB_USER=Navia
+      - DB_PASSWORD=selie
+      - CACHE_ENABLED=false
+      - CACHE_STORE=redis
+      - REDIS=redis://cache:6379
+      - ADMIN_EMAIL=admin@example.com
+      - ADMIN_PASSWORD=d1r3ctu5
+      - DIRECTUS_CORS_ENABLED=true
+      - DIRECTUS_CORS_ORIGIN=http://localhost,http://docketu.iutnc.univ-lorraine.fr
+      - DIRECTUS_CORS_METHODS=GET,POST,PUT,DELETE,PATCH,OPTIONS
+      - DIRECTUS_CORS_HEADERS=Content-Type,Authorization
     networks:
       - geoQuiz.net
 
@@ -114,3 +119,18 @@ services:
     working_dir: /var/www
     networks:
       - geoQuiz.net
+
+  Directus.api.geo:
+    image: 'canals/php:8.2'
+    ports:
+      - '37208:80'
+    volumes:
+      - ./back/API-Directus/public:/var/www/html
+      - ./back/API-Directus:/var/www
+    working_dir: /var/www
+    networks:
+      geoQuiz.net:
+        aliases:
+          - api.geo
+    depends_on:
+      - geoQuiz.db.directus
